Fixed small bug with the website where the nav bar would be out of place

--- a/src/Components/Template/Template.scss
+++ b/src/Components/Template/Template.scss
@@ -13,5 +13,6 @@
     background-color: $background-primary;
     display: flex;
     flex-direction: column;
+    height: 100vh;
   }
 }
