--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,17 @@
 @font-face {
-  font-family: "Roboto";
-  src: url("resources/fonts/Roboto-Regular.ttf");
+    font-family: "Roboto";
+    src: url("resources/fonts/Roboto-Regular.ttf");
 }
 
 body {
-  margin: 0;
-  font-family: 'Roboto', 'sans-serif' !important;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    margin: 0;
+    font-family: 'Roboto', 'sans-serif' !important;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    overflow: hidden;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
